# jcc

./: 1  Cargo.toml  README.md  TODO.md  test.js
benches/: assignment.rs  functions.rs  if_else.rs  numbers.rs  strings.rs  suite.rs
benches/fixtures/function/: declaration.js  expression.js  params.js
benches/fixtures/object/: large_mixed.js  small.js
benches/fixtures/real/: left-pad.js
esprima-test-bed/: package-lock.json  package.json  parse.js
src/: errors.rs  interner.rs  lib.rs
src/estree/: mod.rs
src/syntax/: ast.rs  char.rs  intern.rs  mod.rs  ops.rs  parser.rs  scanner.rs  span.rs  token.rs  word.rs
src/trans/: mod.rs
tests/: .esprima-ignore  arrays.rs  assignment.rs  binary_ops.rs  calls.rs  esprima-ignore  functions.rs  if_else.rs  logical_ops.rs  member.rs  new.rs  numbers.rs  statements.rs  strings.rs  suite.rs  unary_ops.rs
tests/json/: mod.rs
tests/trans-fixtures/arrays/: mixed.js  mixed.out.js
tests/trans-fixtures/binary_ops/: eq_eq.out.js  eq_eq_eq.js  eq_eq_eq.out.js
tests/trans-fixtures/calls/: call.out.js  mixed_arguments.js  mixed_arguments.out.js
tests/trans-fixtures/functions/: named.js  named.out.js  parameters.js  parameters.out.js  unnamed.js  unnamed.out.js
tests/trans-fixtures/if_else/: if.js  if.out.js  if_else.js  if_else.out.js
tests/trans-fixtures/member/: call.js  call.out.js  mixed.js  mixed.out.js  simple_access.js  simple_access.out.js
tests/trans-fixtures/new/: arguments.js  arguments.out.js  simple_new.js
tests/trans-fixtures/numbers/: float.out.js
tests/trans-fixtures/unary_ops/: not.js  not.out.js  (+4 more)
(+5 files in other folders)
