[package]
name = "jcc"
version = "0.1.0"
authors = ["Uku Taht <uku.taht@gmail.com>"]

[lib]
doctest = false
doc = false

[[test]]
name = "suite"
harness = false

[[bench]]
name = "suite"
harness = false

[dependencies]
serde_json = "1.0"
string-interner = "0.6.2"
lazy_static = "0.2"

[dev-dependencies]
rustc-test = "0.1"
glob = "0.2"
