[package]
name = "jcc"
version = "0.1.0"
authors = ["Uku Taht <uku.taht@gmail.com>"]

[lib]
doctest = false
doc = false

[[test]]
name = "suite"
harness = false

[[bench]]
name = "suite"
harness = false

[dependencies]
serde = "1.0"
serde_json = "1.0"
fnv = "1.0.3"

[dev-dependencies]
rustc-test = "0.1"
glob = "0.2"
pretty_assertions = "0.3.4"
